[gd_scene load_steps=11 format=3 uid="uid://cr72y2ugbww3i"]

[ext_resource type="Script" uid="uid://b5q1uq5rynfww" path="res://scripts/world.gd" id="1_w4qq1"]
[ext_resource type="PackedScene" uid="uid://ch41tyyna33oi" path="res://scene/bus_new.tscn" id="2_w4qq1"]
[ext_resource type="PackedScene" uid="uid://bavdc0u8tcfsp" path="res://chandler_3.glb" id="3_w4qq1"]
[ext_resource type="Script" uid="uid://cbkv5ije52512" path="res://scripts/camera_movement.gd" id="4_m5mgf"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_w4qq1"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_m5mgf"]
sky_material = SubResource("ProceduralSkyMaterial_w4qq1")

[sub_resource type="Environment" id="Environment_emkrx"]
background_mode = 2
sky = SubResource("Sky_m5mgf")
tonemap_mode = 2

[sub_resource type="Curve3D" id="Curve3D_m5mgf"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -119.714, 0, 121.761, 0, 0, 0, 0, 0, 0, -103.189, 0, 138.079, 0, 0, 0, 0, 0, 0, -83.5666, 0, 158.735, 0, 0, 0, 0, 0, 0, -61.6716, 0, 194.262, 0, 0, 0, 0, 0, 0, -57.1274, 0, 244.042, 0, 0, 0, 0, 0, 0, -49.0717, 0, 256.642, 0, 0, 0, 0, 0, 0, -48.2455, 0, 270.275, 0, 0, 0, 0, 0, 0, -48.6061, 0, 280.113, 0, 0, 0, 0, 0, 0, -284.125, 0, 234.895, 0, 0, 0, 0, 0, 0, -324.12, 0, 416.367, 0, 0, 0, 0, 0, 0, -382.813, 0, 630.849, 0, 0, 0, 0, 0, 0, -447.82, 0, 781.115, 0, 0, 0, 0, 0, 0, -501.976, 0, 911.331, 0, 0, 0, 0, 0, 0, -565.577, 0, 1044.13, 0, 0, 0, 0, 0, 0, -620.366, 0, 1181.34, 0, 0, 0, 0, 0, 0, -543.088, 0, 1218.94, 0, 0, 0, 0, 0, 0, -480.138, 0, 1284.13, 0, 0, 0, 0, 0, 0, -460.482, 0, 1365.49, 0, 0, 0, 0, 0, 0, -454.97, 0.00012207, 1415.26, 0, 0, 0, 0, 0, 0, -509.986, 0.00012207, 1534.33, 0, 0, 0, 0, 0, 0, -619.262, 0.00012207, 1484.84, 0, 0, 0, 0, 0, 0, -844.216, 0, 1377.49, 0, 0, 0, 0, 0, 0, -873.859, 0, 1360.16, 0, 0, 0, 0, 0, 0, -820.32, 0, 1255.88, 0, 0, 0, 0, 0, 0, -741.189, 0, 1174.23, 0, 0, 0, 0, 0, 0, -652.276, 0, 1176.74, 0, 0, 0, 0, 0, 0, -589.725, 0, 1030.53, 0, 0, 0, 0, 0, 0, -485.257, 0, 803.61, 0, 0, 0, 0, 0, 0, -418.284, 0, 632.314, 0, 0, 0, 0, 0, 0, -358.204, 0, 444.383, 0, 0, 0, 0, 0, 0, -312.187, 0, 231.845, 0, 0, 0, 0, 0, 0, -280.166, 0, 51.7175, 0, 0, 0, 0, 0, 0, -240.939, 0, -124.414, 0, 0, 0, 0, 0, 0, -225.965, 0, -144.174, 0, 0, 0, 0, 0, 0, -61.171, 0, -122.569, 0, 0, 0, 0, 0, 0, -0.766144, 0, -121.611, 0, 0, 0, 0, 0, 0, -7.54883, 0, -49.7644, 0, 0, 0, 0, 0, 0, -133.405, 0, -52.0253, 0, 0, 0, 0, 0, 0, -180.71, 0, -22.3154, 0, 0, 0, 0, 0, 0, -206.585, 0, 78.4201, 0, 0, 0, 0, 0, 0, -205.88, 0, 101.501, 0, 0, 0, 0, 0, 0, -161.667, 0, 111.55),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 42

[sub_resource type="BoxShape3D" id="BoxShape3D_outrp"]

[sub_resource type="BoxMesh" id="BoxMesh_outrp"]

[node name="World" type="Node3D"]
script = ExtResource("1_w4qq1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_emkrx")

[node name="Path3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_m5mgf")

[node name="PathFollow3D2" parent="Path3D" instance=ExtResource("2_w4qq1")]
transform = Transform3D(-1.59558, -2.35255e-06, 2.5405, -4.42325e-06, 3, -4.72884e-13, -2.5405, -3.74576e-06, -1.59558, -171.573, 0, -28.0536)
progress = 4460.0

[node name="BusStop" type="Area3D" parent="." groups=["red_stop"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -205.945, 0.783651, 90.041)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BusStop"]
shape = SubResource("BoxShape3D_outrp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BusStop"]
mesh = SubResource("BoxMesh_outrp")

[node name="BusStop2" type="Area3D" parent="." groups=["yellow_stop_1"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -115.769, 0.783651, 124.334)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BusStop2"]
shape = SubResource("BoxShape3D_outrp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BusStop2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.200392, 0, 0.111084)
mesh = SubResource("BoxMesh_outrp")

[node name="DropOffPoint" type="Area3D" parent="." groups=["drop_off_point"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -848.076, 0.551661, 1375.1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DropOffPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.201172, 0, 0.090332)
shape = SubResource("BoxShape3D_outrp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="DropOffPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.200392, 0, 0.111084)
mesh = SubResource("BoxMesh_outrp")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="PersonCount" type="Label" parent="."]
offset_left = 20.0
offset_top = 5.0
offset_right = 31.0
offset_bottom = 28.0
text = "People Count:"

[node name="PeopleLoaded" type="Label" parent="."]
offset_left = 20.0
offset_top = 24.0
offset_right = 134.0
offset_bottom = 47.0
text = "People Loaded: "

[node name="chandler_3" parent="." instance=ExtResource("3_w4qq1")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="MaxPeopleToLoad" type="Label" parent="."]
offset_left = 20.0
offset_top = 43.0
offset_right = 134.0
offset_bottom = 66.0
text = "Max People: "

[node name="PeopleSpawnTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="PeopleSpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -107.664, 0, 108.544)

[node name="Peoples" type="Node3D" parent="."]

[node name="PeopleLoadingTimer" type="Timer" parent="."]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, -7.45058e-09, -3.25675e-16, 0, -4.37114e-08, 1, -7.45058e-09, -1, -4.37114e-08, -67.979, 68.705, 211.016)
script = ExtResource("4_m5mgf")

[node name="DropOffTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="BusStop" to="." method="_on_red_stop_area_entered"]
[connection signal="area_exited" from="BusStop" to="." method="_on_red_stop_area_exited"]
[connection signal="area_entered" from="BusStop2" to="." method="_on_yellow_stop_area_entered"]
[connection signal="area_exited" from="BusStop2" to="." method="_on_yellow_stop_area_exited"]
[connection signal="area_entered" from="DropOffPoint" to="." method="_on_drop_off_point_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PeopleSpawnTimer" to="." method="_on_people_spawn_timer_timeout"]
[connection signal="timeout" from="PeopleLoadingTimer" to="." method="_load_people"]
[connection signal="timeout" from="DropOffTimer" to="." method="_on_drop_off_timer_timeout"]
